@@ -5,6 +5,7 @@ pyReScene 0.6
  * pyReScene Auto: SRRs for vobsubs path bug fixed and optional switch added
  * pyReScene Auto: stored SRR and RAR files above their SFV in list
  * pyReScene Auto: crash fixed when path of SRR to create was too long
+ * pyReScene Auto: failed to create SRRs when 'subs' was found in file names
  * ReSample: MemoryError on large MP4s fixed and 
              skipping crc32 calculation when possible
  * ReSample: KeyError fixed for RIFF mp3
